# ztd-capstone

./: .gitignore  .trivyignore  README.md  docker-compose.yml  otel-collector-config.yaml  sonar-project.properties
.github/workflows/: ci.yml  pr-checks.yml  release.yml  terraform.yml
.superpowers/sdd/: phase5-report.md  phase6-report.md  progress.md
deploy/argocd/: argocd-values.yaml  root-app.yaml
deploy/helm/: validate.sh
deploy/observability/: kube-prometheus-stack.values.yaml  loki.values.yaml  opentelemetry-collector.values.yaml  promtail.values.yaml  tempo.values.yaml
docs/plans/: 2026-07-09-phase1-foundation-bootstrap.md  2026-07-09-phase2-app-services.md  2026-07-09-phase3-helm-chart.md  2026-07-09-phase4-stack-terraform.md  2026-07-09-phase5-observability.md  2026-07-09-phase6-app-deploy.md  2026-07-09-phase7-cicd.md  2026-07-09-phase8-argocd-gitops.md
docs/specs/: 2026-07-09-ztd-capstone-design.md
scripts/: build-push-images.sh  gen-traffic.sh
services/api-gateway/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  package-lock.json  package.json  tsconfig.json
services/catalog/: .env.example  Dockerfile  go.mod  go.sum  handlers.go  handlers_test.go  main.go  observability.go  products.go
services/frontend/: .env.example  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf.template  package-lock.json  package.json  (+1 more)
services/orders/: .dockerignore  .env.example  Dockerfile  pyproject.toml
services/orders/app/: catalog_client.py  config.py  db.py  main.py  observability.py  routes.py
services/orders/tests/: test_routes.py
(+60 files in other folders)
